<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/str_start"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/str_minutes"
        android:fontFamily="@font/aldrich"
        android:text="@string/str_00"
        android:textAlignment="center"
        android:textSize="92sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        tools:text="@string/str_00" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/str_separator"
        android:textAlignment="center"
        android:textSize="92sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/str_seconds"
        android:fontFamily="@font/aldrich"
        android:text="@string/str_00"
        android:textAlignment="center"
        android:textSize="92sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/separator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <ImageButton
        android:id="@+id/minutes_up"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/str_up"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/minutes"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/minutes_down"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_down"
        android:elevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/minutes"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/seconds_up"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/str_up"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/seconds"
        app:layout_constraintStart_toStartOf="@+id/seconds"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/seconds_down"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_down"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@+id/seconds"
        app:layout_constraintTop_toBottomOf="@+id/seconds"
        app:srcCompat="@android:drawable/arrow_down_float" />

</android.support.constraint.ConstraintLayout>
